; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/test/extr_test_pax_filename_encoding.c_test_pax_filename_encoding_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/test/extr_test_pax_filename_encoding.c_test_pax_filename_encoding_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }
%struct.archive_entry = type { i32 }

@test_pax_filename_encoding_1.testname = internal constant [31 x i8] c"test_pax_filename_encoding.tar\00", align 16
@__const.test_pax_filename_encoding_1.filename = private unnamed_addr constant [13 x i8] c"abc\CC\8Cmno\FCxyz\00", align 1
@ARCHIVE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [62 x i8] c"Invalid UTF8 in a pax archive pathname should cause a warning\00", align 1
@ARCHIVE_WARN = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [103 x i8] c"A pathname with hdrcharset=BINARY can have invalid UTF8\0A characters in it without generating a warning\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_pax_filename_encoding_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_pax_filename_encoding_1() #0 {
  %1 = alloca [13 x i8], align 1
  %2 = alloca %struct.archive*, align 8
  %3 = alloca %struct.archive_entry*, align 8
  %4 = bitcast [13 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %4, i8* align 1 getelementptr inbounds ([13 x i8], [13 x i8]* @__const.test_pax_filename_encoding_1.filename, i32 0, i32 0), i64 13, i1 false)
  %5 = call i32 @extract_reference_file(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @test_pax_filename_encoding_1.testname, i64 0, i64 0))
  %6 = call %struct.archive* (...) @archive_read_new()
  store %struct.archive* %6, %struct.archive** %2, align 8
  %7 = load i32, i32* @ARCHIVE_OK, align 4
  %8 = load %struct.archive*, %struct.archive** %2, align 8
  %9 = call i32 @archive_read_support_format_tar(%struct.archive* %8)
  %10 = call i32 @assertEqualInt(i32 %7, i32 %9)
  %11 = load i32, i32* @ARCHIVE_OK, align 4
  %12 = load %struct.archive*, %struct.archive** %2, align 8
  %13 = call i32 @archive_read_support_filter_all(%struct.archive* %12)
  %14 = call i32 @assertEqualInt(i32 %11, i32 %13)
  %15 = load i32, i32* @ARCHIVE_OK, align 4
  %16 = load %struct.archive*, %struct.archive** %2, align 8
  %17 = call i32 @archive_read_open_filename(%struct.archive* %16, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @test_pax_filename_encoding_1.testname, i64 0, i64 0), i32 10240)
  %18 = call i32 @assertEqualInt(i32 %15, i32 %17)
  %19 = call i32 @failure(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0))
  %20 = load i32, i32* @ARCHIVE_WARN, align 4
  %21 = load %struct.archive*, %struct.archive** %2, align 8
  %22 = call i32 @archive_read_next_header(%struct.archive* %21, %struct.archive_entry** %3)
  %23 = call i32 @assertEqualInt(i32 %20, i32 %22)
  %24 = getelementptr inbounds [13 x i8], [13 x i8]* %1, i64 0, i64 0
  %25 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %26 = call i32 @archive_entry_pathname(%struct.archive_entry* %25)
  %27 = call i32 @assertEqualString(i8* %24, i32 %26)
  %28 = call i32 @failure(i8* getelementptr inbounds ([103 x i8], [103 x i8]* @.str.1, i64 0, i64 0))
  %29 = load i32, i32* @ARCHIVE_OK, align 4
  %30 = load %struct.archive*, %struct.archive** %2, align 8
  %31 = call i32 @archive_read_next_header(%struct.archive* %30, %struct.archive_entry** %3)
  %32 = call i32 @assertEqualInt(i32 %29, i32 %31)
  %33 = getelementptr inbounds [13 x i8], [13 x i8]* %1, i64 0, i64 0
  %34 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %35 = call i32 @archive_entry_pathname(%struct.archive_entry* %34)
  %36 = call i32 @assertEqualString(i8* %33, i32 %35)
  %37 = load %struct.archive*, %struct.archive** %2, align 8
  %38 = call i32 @archive_read_free(%struct.archive* %37)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @extract_reference_file(i8*) #2

declare dso_local %struct.archive* @archive_read_new(...) #2

declare dso_local i32 @assertEqualInt(i32, i32) #2

declare dso_local i32 @archive_read_support_format_tar(%struct.archive*) #2

declare dso_local i32 @archive_read_support_filter_all(%struct.archive*) #2

declare dso_local i32 @archive_read_open_filename(%struct.archive*, i8*, i32) #2

declare dso_local i32 @failure(i8*) #2

declare dso_local i32 @archive_read_next_header(%struct.archive*, %struct.archive_entry**) #2

declare dso_local i32 @assertEqualString(i8*, i32) #2

declare dso_local i32 @archive_entry_pathname(%struct.archive_entry*) #2

declare dso_local i32 @archive_read_free(%struct.archive*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
